Added 'managed by puppet' disclaimer to files

--- a/templates/resolv.conf.erb
+++ b/templates/resolv.conf.erb
@@ -1,3 +1,5 @@
+# File managed by puppet
+
 domain <%= scope.lookupvar('resolv_conf::domainname') %>
 <% if !scope.lookupvar('resolv_conf::searchpath').empty? %>search <%= scope.lookupvar('resolv_conf::searchpath').join(" ") %>
 <% end -%>
