Support the "options" configuration option.
Added generic support for the "options" keyword as well as a new
parameterized class test.

--- a/templates/resolv.conf.erb
+++ b/templates/resolv.conf.erb
@@ -7,3 +7,5 @@ domain <%= scope.lookupvar('resolv_conf::domainname') %>
 <% end -%>
 <% scope.lookupvar('resolv_conf::nameservers').each do |ns| %>nameserver <%= ns %>
 <% end -%>
+<% if !scope.lookupvar('resolv_conf::options').empty? %>options <%= scope.lookupvar('resolv_conf::options').join(" ") %>
+<% end -%>
