only set domain or searchpath as they are mutually exclusive

--- a/templates/resolv.conf.erb
+++ b/templates/resolv.conf.erb
@@ -1,6 +1,8 @@
 # File managed by puppet
 
+<%- if @domainname_real -%>
 domain <%= @domainname %>
+<%- end -%>
 <% if !@searchpath.empty? -%>
 <% if @searchpath.kind_of? Array -%>
 search <%= @searchpath.join(" ") %>
