Fix failed domainname and searchpath clash

--- a/templates/resolv.conf.erb
+++ b/templates/resolv.conf.erb
@@ -3,7 +3,7 @@
 <%- if @domainname_real -%>
 domain <%= @domainname %>
 <%- end -%>
-<% if !@searchpath.empty? -%>
+<% if @searchpath && !@searchpath.empty? -%>
 <% if @searchpath.kind_of? Array -%>
 search <%= @searchpath.join(" ") %>
 <% else -%>
