--- a/templates/resolv.conf_sol11.erb
+++ b/templates/resolv.conf_sol11.erb
@@ -11,7 +11,7 @@ domain	<%= @domainname_real %>
 <%- end -%>
 <% if !@searchpath.empty? -%>
 <% if @searchpath.kind_of? Array -%>
-search	<%= @searchpath.join(" ") %>
+search	<%= @searchpath.uniq().join(" ") %>
 <% else -%>
 search	<%= @searchpath %>
 <% end -%>
